# ubiquiti-load-balancer-monitor

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  pyproject.toml
scripts/: reboot_via_telnet.sh  setup.sh  uptime.sh  uptime_via_telnet.sh
src/ubiquiti_monitor/: cli.py  models.py  modem.py  power_strips.py  utils.py  watchdog.py
stacks/farm/: docker-compose.yml
stacks/local/: docker-compose.yml
tests/unit/: test_cli.py  test_models.py  test_modem.py  test_power_strips.py  test_utils.py  test_watchdog.py
tests/unit/files/: test_utils.py  watchdog-down.txt  watchdog.txt
